Fixed globally defined Color constants and their usage/reference in all affected files

--- a/www/includes/day.css
+++ b/www/includes/day.css
@@ -247,7 +247,7 @@
 		
 		td.addletd {
 			border-style:solid;
-			border-color: #TABLEBORDERC;
+			border-color: #CCCCCC;
 			border-width:1px;
 			font-size: 22px;
 			text-align: center;
