--- a/www/includes/night.css
+++ b/www/includes/night.css
@@ -246,7 +246,7 @@
 		}
     td.addletd {
        border-style:solid;
-       border-color: #TABLEBORDERC;
+       border-color: #CBBA79;
        border-width:1px;
        font-size: 22px;
 		   text-align: center;
