Fixed CSS definition and file pathes for static CSS and Error files

--- a/www/includes/night.css
+++ b/www/includes/night.css
@@ -68,7 +68,7 @@ div.menu {
 }
 
 table.dreid {
-	background-color: #TABLEBGCOLOR; /* EDF2F2 */
+	background-color: #E5E5E5; /* EDF2F2 */
 	
 	border-bottom-style: solid;
 	border-bottom-color: #CBBA79; /* ddd */
