Fixed Smarty Template-Editor - works again

--- a/www/templates/tpleditor.html
+++ b/www/templates/tpleditor.html
@@ -1,4 +1,4 @@
-{*include_php file="file:tpleditor.php"*}
+{include_php file="file:tpleditor.php"}
 
 
 {if $smarty.get.tpleditorupd && $smarty.get.tpl!="new"}
