--- a/www/css/night.css
+++ b/www/css/night.css
@@ -2,8 +2,8 @@
 html, body { height: 100%; }
  
 body {
-  background-color: #000000;
-  color: #FFFFFF;
+	background-color: #000000;
+	color: #FFFFFF;
 	font-family: Verdana, Sans-Serif;
 	font-size: 13px;
 	margin: 2px;
@@ -24,12 +24,12 @@ table.shadedcells td {
 }
 
 a, a.mention {
-  color: #CBBA79;
-  text-decoration: none;
+	color: #CBBA79;
+	text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .border {
@@ -50,25 +50,25 @@ border-color: #CBBA79;
 }
 
 blockquote {
-  font: 13px/22px normal;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-  padding-left: 15px;
-  border-left: 3px solid #CBBA79;
+	font: 13px/22px normal;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 50px;
+	padding-left: 15px;
+	border-left: 3px solid #CBBA79;
 }
 
 code { word-wrap: break-word; }
 
 pre {
-  background-color: #23241f;
-  color: #f8f8f2;
-  overflow: visible;
-  white-space: pre-wrap;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  padding: 5px 10px;
-  border-radius: 3px;
+	background-color: #23241f;
+	color: #f8f8f2;
+	overflow: visible;
+	white-space: pre-wrap;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	padding: 5px 10px;
+	border-radius: 3px;
 }
 
 div.menu {
@@ -162,6 +162,10 @@ td.forum {
 	padding: 0px;
 }
 
+a img:hover {
+	box-shadow: 0 0 0 1px #cbba79;
+}
+
 img.forum {
 	height: 16px;
 	width: 16px;
@@ -170,29 +174,29 @@ img.forum {
 td.end {
 	background-image: url("/images/forum/end.gif");
 	background-repeat: no-repeat;
-  height: 16px;
+	height: 16px;
 	margin: 0px;
 	padding: 0px;
-  width: 16px;
-  vertical-align: top;
+	width: 16px;
+	vertical-align: top;
 }
 
 td.space {
-  background-image: url("/images/forum/space.gif");
-  height: 16px;
+	background-image: url("/images/forum/space.gif");
+	height: 16px;
 	margin: 0px;
 	padding: 0px;
-  width: 16px;
-  vertical-align: top;
+	width: 16px;
+	vertical-align: top;
 }
 
 td.vertline {
-  background-image: url("/images/forum/vertline.gif");
-  height: 16px;
+	background-image: url("/images/forum/vertline.gif");
+	height: 16px;
 	margin: 0px;
 	padding: 0px;
-  width: 16px;
-  vertical-align: top;
+	width: 16px;
+	vertical-align: top;
 }
 		
 input:focus {
@@ -257,8 +261,8 @@ input[type=checkbox], input[type=radio] {
 }
 
 .button:disabled, .button:disabled:hover {
-    border-style: outset;
-    background-color: #dddddd;
+	  border-style: outset;
+	  background-color: #dddddd;
 }
 
 .small{
@@ -275,82 +279,72 @@ border-style:solid;
 border-color: #CBBA79;
 border-width:1px;
 font-size: 22px;
-   text-align: center;
+	 text-align: center;
 }
 
 /** HTML5.2 Modial Dialog */
 dialog {
-  padding: 0;
-  border: 0;
-  border-radius: 0.6rem;
-  color: inherit;
-  -webkit-box-shadow: 0 0 1em black;
-          box-shadow: 0 0 1em black;
+	padding: 0;
+	border: 0;
+	border-radius: 0.6rem;
+	color: inherit;
+	box-shadow: 0 0 1em black;
 }
 /** native backdrop */
 dialog::-webkit-backdrop {
-  background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(0, 0, 0, 0.4);
 }
 dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(0, 0, 0, 0.4);
 }
 /** polyfill backdrop */
 dialog + .backdrop {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.8);
 }
 dialog[open] {
-  -webkit-animation: slide-up 0.4s ease-out;
-          animation: slide-up 0.4s ease-out;
+	-webkit-animation: slide-up 0.4s ease-out;
+	animation: slide-up 0.4s ease-out;
 }
 /** The following styles are for older browsers when using */
 dialog {
-  display: none;
-  position: absolute;
-  margin: 0 auto;
-  /** should center it, but not working in Safari */
-  max-width: 80vw;
-  color: inherit;
-  background-color: #42300A;
+	display: none;
+	position: absolute;
+	margin: 0 auto;
+	/** should center it, but not working in Safari */
+	max-width: 80vw;
+	color: inherit;
+	background-color: #42300A;
 }
-dialog[open] {
-  display: block;
-}
+dialog[open] { display: block; }
 /** prettying things up a bit */
 .close {
-  position: absolute;
-  top: 0.2em;
-  right: 0.2em;
-  padding: 0.3em;
-  line-height: 0.6;
-  color: red;
-  background-color: transparent;
-  border: 0;
+	position: absolute;
+	top: 0.2em;
+	right: 0.2em;
+	padding: 0.3em;
+	line-height: 0.6;
+	color: red;
+	background-color: transparent;
+	border: 0;
 }
 .modal-header,
 .modal-body,
-.modal-footer {
-  padding: 1em;
-}
+.modal-footer { padding: 1em; }
 .modal-header {
-  margin: 0;
-  padding-bottom: 0.6em;
-  padding-right: 2.5em;
-  background-color: #42300A;
-  border-top-left-radius: 0.6rem;
-  border-top-right-radius: 0.6rem;
+	margin: 0;
+	padding-bottom: 0.6em;
+	padding-right: 2.5em;
+	background-color: #42300A;
+	border-top-left-radius: 0.6rem;
+	border-top-right-radius: 0.6rem;
 }
-.modal-footer {
-  border: 0;
-}
-
-.modal-footer button:last-child {
-  float:right;
-}
+.modal-footer { border: 0; }
+.modal-footer button:last-child { float:right; }
 
 /** Profile Pics - Circle Style */
 div.profilepic {
@@ -366,38 +360,42 @@ div.profilepic img {
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 }
+div.profilepic a img:hover {
+	text-decoration: none;
+	box-shadow: 0 0 0 1px #cbba79;
+}
 
 /** Alert message boxes */
 .alert {
-    padding: 10px;
-    margin-bottom: 15px;
-    background-color: #f44336; /** Red */
-    color: white;
-    cursor: pointer;
-    opacity: 0.85;
-    -webkit-transition: opacity 0.3s;
-    -moz-transition: opacity 0.3s;
-    -o-transition: opacity 0.3s;
-    -ms-transition: opacity 0.3s;
-    transition: opacity 0.3s;
+	  padding: 10px;
+	  margin-bottom: 15px;
+	  background-color: #f44336; /** Red */
+	  color: white;
+	  cursor: pointer;
+	  opacity: 0.85;
+	  -webkit-transition: opacity 0.3s;
+	  -moz-transition: opacity 0.3s;
+	  -o-transition: opacity 0.3s;
+	  -ms-transition: opacity 0.3s;
+	  transition: opacity 0.3s;
 }
 .alert.success {background-color: #4CAF50} /** Green */
 .alert.info {background-color: #2196F3;} /** Blue */
 .alert.warning {background-color: #ff9800;} /** Orange */
 /** Alert message box close button */
 .closebtn {
-    margin-left: 15px;
-    color: white;
-    font-weight: bold;
-    float: right;
-    font-size: 22px;
-    line-height: 10px;
-    cursor: pointer;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    -ms-transition: 0.3s;
-    transition: 0.3s;
+	  margin-left: 15px;
+	  color: white;
+	  font-weight: bold;
+	  float: right;
+	  font-size: 22px;
+	  line-height: 10px;
+	  cursor: pointer;
+	  -webkit-transition: 0.3s;
+	  -moz-transition: 0.3s;
+	  -o-transition: 0.3s;
+	  -ms-transition: 0.3s;
+	  transition: 0.3s;
 }
 /** When moving the mouse over the close button */
 .closebtn:hover {color: black;}
