--- a/www/css/night.css
+++ b/www/css/night.css
@@ -172,7 +172,7 @@ img.forum {
 }
 
 td.end {
-	background-image: url("/images/forum/end.gif");
+	background-image: url("/images/forum/night/end.gif");
 	background-repeat: no-repeat;
 	height: 16px;
 	margin: 0px;
@@ -182,7 +182,7 @@ td.end {
 }
 
 td.space {
-	background-image: url("/images/forum/space.gif");
+	background-image: url("/images/forum/night/space.gif");
 	height: 16px;
 	margin: 0px;
 	padding: 0px;
@@ -191,7 +191,7 @@ td.space {
 }
 
 td.vertline {
-	background-image: url("/images/forum/vertline.gif");
+	background-image: url("/images/forum/night/vertline.gif");
 	height: 16px;
 	margin: 0px;
 	padding: 0px;
