[Bug #768] Smarty now also recompiles cached templates based on word:name

--- a/www/templates/tpleditor.html
+++ b/www/templates/tpleditor.html
@@ -76,6 +76,7 @@
       			<input class="text" size="30" id="word" name="frm[word]" value="{$tpleditor_frm.word}">
       		{else}
       			{$tpleditor_frm.word}
+      			<input type="hidden" name="frm[word]" value="{$tpleditor_frm.word}">
       		{/if}
       	</td>
     	</tr>
