--- a/www/css/night.css
+++ b/www/css/night.css
@@ -260,11 +260,11 @@ header > .infos .solarstate .countryflag {
 	height: 1.2em;
 	vertical-align: text-top;
 }
-header > .service form fieldset {
+header > .service form .login-input {
 	display: flex;
 	border: none;
 }
-header > .service form fieldset label {
+header > .service form .login-input label {
 	flex: 1;
 	margin-right: 10px;
 	padding: 0 2px 0 2px;
