Fixes code security- & encoding issues

--- a/www/templates/recur_handler.html
+++ b/www/templates/recur_handler.html
@@ -1,6 +1,6 @@
 {* $recur_denied_tpl: tpl on which recursion was detected *}
 
 {literal}
-   <p><font color="red">[<b>Warning:</b> {include tpl={/literal}{$recur_denied_tpl}{literal}} 
-   wurde nicht ausgeführt, weil es mehrfach vorkommt.]</FONT></p>
+   <p><font color="red">[<b>Warning:</b> {include tpl={/literal}{$recur_denied_tpl}{literal}}
+   wurde nicht ausgefÃ¼hrt, weil es mehrfach vorkommt.]</FONT></p>
 {/literal}
